--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: gray;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Raleway', sans-serif;
 }
 .navbar {
   font-size: 2em;
@@ -13,15 +13,30 @@ body {
 h2 {
   text-align: center;
 }
+
 .row {
   text-align: center;
   color: white;
   background-color: black;
-  padding-left: 150px;
+  margin: 0 auto;
   padding-top: 30px;
   padding-bottom: 30px;
   
 }
+
+footer {
+  position: relative;
+  right: 0;
+  bottom: 0;
+  left: 0px;
+  padding: 10px;
+  margin-top: 10px;
+}
+.col-md-2 {
+  text-align: left;
+}
+
+
 #Contactme {
   color: white;
 }
@@ -33,10 +48,8 @@ h2 {
   margin-top: 100px;
   margin-bottom: 100px;
 }
-#socialmedia {
-  color: white;
-  text-align: center;
-}
+
+
 
 
 
