--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Patrick Hand SC', cursive;
+  font-family: 'Shadows Into Light', cursive;
   background-image: url('Images/Background.png');
   background-size: cover;
   }
