--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   font-family: 'Shadows Into Light', cursive;
-  background-image: url('Images/Background.png');
+  background-image: url('Images/background3.jpg') ;
   background-size: cover;
   height: 100%;
   width: 100%;
   position: absolute;
+  color: white;
   }
 
 #About {
@@ -32,4 +33,14 @@ body {
 #Portfolio {
   width: 100%;
   height: 100%;
+}
+#socialmedia {
+  text-align: center;
+  font-size: 150%;
+}
+.navLink {
+  color: white;
+}
+#copyright {
+  text-align: center;
 }
