--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-  background-color: #ffcce6;
+  background-color: #e6ccff;
   font-family: 'Open Sans', sans-serif;
 }
-.container-fluid {
+/*.container-fluid {
   position: absolute;
 
-}
+}*/
 nav {
   top: 0;
   left: 0;
@@ -17,7 +17,7 @@ nav {
 nav a {
   margin-top: 5px;
   margin-bottom: 5px;
-  color: brown;
+  color: white;
   font-size: 110%;
   margin: 10px;
   /*text-align: left;*/
@@ -27,30 +27,26 @@ nav a {
   padding: 5px 0 !important;
 }
 
-h2 {
-  text-align: center;
-}
-p {
+
+.innerContainer {
   display: inline-flex;
   margin-left: 20%;
   margin-right: 20%;
+  flex-direction: column;
+}
+h3 {
   text-align: center;
 }
-#container {
-  display: inline-block;
-  margin-left: 20%;
-  margin-right: 20%;
-  width: 50%;
-  position: relative;
-
-
-
-
-}
+/*
 img {
-  border-radius: 90px;
-}
-.innerContainer {
-  text-align: right;
+    margin: 0;
+    border-radius: 50%;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   margin-right: -50%;
+   transform: translate(-50%, -50%)
+
 
 }
+*/
